WebHelpers ChangeLog

0.3.2 (**svn**)
* Updated SQLAlchemy ORM pagination for SA 0.4 Session.mapper objects.
* Updated Scriptaculous to 1.7.1 beta 3 (1.7.0 is incompatible with Prototype
  1.5.1). Thanks errcw. Fixes #288.

0.3.1 (07/14/07)
* Added the secure_form_tag helper module, for generating form tags
  including client-specific authorization tokens for preventing CSRF
  attacks. Original patch by David Turner. Fixes #157.
* current_url now accepts arguments to pass along to url_for. Fixes #251.
* Updated prototype to 1.5.1.1.
* Added image support to button_to. Patch by Alex Conrad. Fixes #184.
* Fix radio_button and submit_to_remote not handling unicode values.
  Fixes #235.
* Added support for the defer attribute to javascript_include_tag. Suggested by
  s0undt3ch. Fixes #214.
* Added a distutils command compress_resources, which can combine CSS
  and Javascript files, and compress Javascript via ShrinkSafe.  Add
  "command_packages=webhelpers.commands" in [global] in setup.cfg to
  enable this command for your package.

0.3 (03/18/2007)
* WARNING: paginate now takes arguments intended for the collection object as
  query_args. This could affect backwards compatibility. This fixes a common
  issue that non-keyword arguments passed into paginate get eaten by paginate's
  keyword arguments instead of being in *args to go on to the collection.
* Added environ checking with Routes so that page will be automatically pulled
  out of the query string, or from the Routes match dict if available.
* Added ability for paginate to check for objects that had SQLAlchemy's 
  assign_mapper applied to them.
* Added better range checking to paginator to require a positive value that is
  less than the total amount of pages available for a page.
* WARNING: Due to a typo, the Text helper highlight function no longer
  highlights text with the CSS class name 'hilight' by default: it now uses the
  CSS class name 'highlight' instead. The function's 'hilighter' keyword